--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -44,6 +44,12 @@ h1 {
   background-color: whitesmoke;
 }
 
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .navBarImg{
   max-width: 5%;
 }
