--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,11 @@
   padding: 2em;
 }
 
+.pad {
+  padding-top: 1.5em;
+  padding-bottom: 1em;
+}
+
 @media (max-width:780px){
   .fish-icon {
     right: -10%;
